Version ClaSS-1.0.65 release (2014/03/10)
-------------------------------------------

Photo picker added for report skills and subject reports.

School bank accounts management added to fees.

New import assessments scores from file.


Version ClaSS-1.0.64 release (2014/02/17)
-------------------------------------------

Teacher photo is shared now with Classic.

Student attendance history has now sheets for every year since he/she started.

Added script to display images from Classis in Classic (only $CFG->eportfoliosite).

Added function to append html to a comment in Classic.

When a shared comment is deleted in Classis it is also deleted from Classic.

If a comment is shared the "Share with parents" area is hidden.

When an image is uploaded for a comment is is appended to a comment 
if this is shared.


Version ClaSS-1.0.63 release (2014/02/10)
-------------------------------------------

Added next and previous buttons for navigating contacts.

Fix to deleting fee charges from the InfoBook.

New functionality for selecting students during the new remittance.

Invoices for fees now have the option to use a custom template
(defined as $CFG->tempinvoice).

InfoBook student sheet now has the option to use a custom template
(defined as $CFG->tempinfosheet).

Fix to syncing icons with the epf database.

Extra box to have a comment associated with enrolment assessments.

Automatic updating of assessments in MarkBook as and when definitions are changed.

A cron job added to automatically generate assessment columns based on create date.

The generate/delete buttons have been merged into one function under
manage assessments.

Added a tmeplate for use when sending epf emails (needs a categorydef
template name=classicemail).

The eportfolio_publish_reports cron script now also queues a
notification message to contacts thorugh Classic's message_event queue.



Version ClaSS-1.0.62 release (2014/01/21)
-------------------------------------------
