@@ -85,6 +85,11 @@ if($_POST['payment0']=='yes'){
 		<script>openFileExport('<?php print $ftype;?>');</script>
 <?php
 			}
+
+	if(isset($_SESSION['remittancestotals'])){
+		$Remittance=fetchRemittance($remid);
+		unset($_SESSION['remittancestotals'][$Remittance['Year']['value']]);
+		}
 	}
 else{
 	$result[]=get_string('noactiontaken',$book);
