@@ -1,6 +1,8 @@
 Version ClaSS-1.0.65 release (2014/03/10)
 -------------------------------------------
 
+Added bar chart for remittances list and navigation by month/year.
+
 Photo picker added for report skills and subject reports.
 
 School bank accounts management added to fees.
